# Zoo

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  pyproject.toml
configs/zoo/: attention.yaml  attention_iree_turbine.yaml  llama_on_device.yaml  llama_on_device_iree_turbine.yaml  mlp.yaml  mlp_iree_turbine.yaml  rmsnorm.yaml  rmsnorm_iree_turbine.yaml  topk.yaml  topk_iree_turbine.yaml
docs/: ARCHITECTURE.md  GUIDELINES.md  RECIPES.md  SCOPE.md  SHARK_AI_ANALYSIS.md
docs/diagrams/: architecture.drawio
scripts/: hanneuro_gui_server.py  run_hf_models_export.py  run_iree_turbine_export.py  run_llama_export.py  run_whisper_export.py  run_zoo_export.py
src/npu_harness_framework/: __init__.py  interfaces.py  pipeline.py  profiler.py  registry.py
src/torch_mlir_zoo/: __init__.py  han_neuro.py  stages.py
src/torch_mlir_zoo/analysis/: __init__.py  ir_summary.py
src/torch_mlir_zoo/exporters/: __init__.py  iree_turbine_export.py  torch_mlir_export.py
src/torch_mlir_zoo/models/: __init__.py  llama_on_device.py
src/torch_mlir_zoo/ops/: __init__.py  attention.py  mlp.py  rmsnorm.py  topk.py
tests/: test_core.py  test_han_neuro.py  test_ir_summary.py  test_iree_cpu_numeric.py  test_iree_turbine_export.py  test_llama_pipeline.py  test_zoo_export.py  test_zoo_ops.py
